<resources>
    <string name="app_name">HighTime</string>
    <string name="title_activity_register">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="alphabet_text">1)
        "ABC уровень рассчитан для детей дошкольного и младшего возраста, а также для учителей, родителей, которые помогут малышам делать первые шаги для изучения английского языка и тем, кто желает выучить английский с нулевого уровня."
\n\n
"•  На этом уровне всего 26 уроков. Каждый урок состоит из трех видео уроков, интересных игр, а также тестирования для проверки ваших знаний."
\n\n
•  По завершению этого уровня, вы будете знать алфавит английского языка, более 200 слов и веселые песни. Вы сможете составлять простые предложения на английском языке.
\n\n
•  Для успешного завершения этого уровня вам потребуется иметь при себе пластилин.
\n\n
•  Чем интенсивнее вы будете изучать материалы курса, тем быстрее будете продвигаться.
\n\n
•  Мы призываем вас изучать материалы и применять изученное в повседневной жизни.
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="hightime">
High Time даст вам возможность быстро и легко выучить английский язык.
В этих курсах есть 6 уровней , в каждом уровне по 25-30 уроков.
Один урок включает в себя несколько видео уроков, которые дадут вам возможность максимально
хорошо усвоить тему.
Вы можете изучать английский язык с помощью снятых нами видео-роликов, использованием различных пластилинов,
очень доступное объяснение различных тем. Это приложение эффективно улучшит ваши знания по грамматике,
расширит словарный запас и поможет подготовиться к экзаменам, путешествию, где не будет языковых барьеров(преград).
</string>
    <string name="some_id">Пройти тест</string>
    <string name="test1text">1) Составьте из данных слов предложение:</string>
    <string-array name="quesDesc">
        <item>1) Составьте из данных слов предложение:</item>
        <item>2) Составьте из данных слов предложение:</item>
        <item>3) Составьте из данных слов предложение:</item>
        <item>4) Выберите правильный ответ:</item>
        <item>5) Выберите правильный ответ:</item>

        <item>6) Выберите правильный ответ:</item>
        <item>7) Выберите правильный ответ:</item>
        <item>8) Выберите правильный ответ:</item>
        <item>9) Выберите правильный ответ:</item>
        <item>10) Выберите правильный ответ:</item>

        <item>11) Выберите правильный ответ:</item>
        <item>12) Выберите правильный ответ:</item>
        <item>13) Выберите правильный ответ:</item>
        <item>14) Выберите правильный ответ:</item>
        <item>15) Выберите правильный ответ:</item>

    </string-array>
    <string name="hightime_13">

        Крупнейшая языковая школа Кыргызстана
по изучению английского языка.
HighTime был создан 13 января 2006 года.
Основателем школы HighTime является
Гульзат Мамытбек.
Цель создания школы - открыть
бизнес и забрать родителей из села,
из села Ала-Бука,
Жалал-Абадской области.
    </string>
    <string name="hightime_14">
Позвольте выразить Вам искреннюю
благодарность от своего лица и от всего
коллектива «Navat» за обучение.
Все приобретенные знания используются
нами во время работы, ведь у нас много
иностранных гостей из разных стран.
И им требуется обращаться
на английском языке.
Надеемся на дальнейшее столь
же плодотворное сотрудничество.
    </string>
    <string name="hightime_15">

        Компания MegaCom (ЗАО "Альфа Телеком") выражает благодарность сотрудникам языковой школы “High Time” за отлично проведенные уроки.
  
Обучение персонала должно проходить таким образом, чтобы мотивировать сотрудников на дальнейшее развитие и на достижение результатов. Особенно приятно, когда
обучение проходит легко и интересно. Знание английского языка в наше время является необходимым.
 Мы благодарим за высокопрофессиональный подход и качественную подачу материала!


    </string>
    <string name="hightime_16">

Этно-комплекс “Супара ” выражает благодарность за обучение. Хотим отметить высокую
 квалификацию преподавательского состава, четкую и профессиональную работу
 сотрудников.

 Желаем дальнейшего процветания и профессиональных побед! Вместе с Вами всегда есть к чему стремиться и расти молодому поколению, которое
 стоит на пути выбора своей жизненной профессии. Желаем Вам и Вашему коллективу благополучия и больших творческих успехов в нелегком и благородном труде!


    </string>
    <string name="onas_text">12 лет</string>
    <string name="onas_text_s">опыта</string>
    <string name="onas_text_s2">
корпоративных
\nклиентов
    </string>
</resources>