<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".test.Test1Activity"
    tools:showIn="@layout/activity_test1">



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"

        android:orientation="vertical"

        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/test1text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/test1text"
            android:textAppearance="@style/test1text"
            />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/line"
            />

        <TextView
            android:id="@+id/hightime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/hightime"
            android:textAppearance="@style/hightime"
            android:gravity="center_horizontal"
            />



        <Button
            android:id="@+id/blue_base"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/blue_base"
            android:elevation="6dp"
            android:onClick="Test1ActivityOpen"

            android:text="@string/some_id"
            android:textColor="#FFF" />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>